deploy: cd8e4fde3942ea092402183bf32e74cf4751b85e

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_lessons">1. Lessons</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Материал и ссылки на материал необходимые для занятия.</p>
+<p>Материал и ссылки на материал необходимый для занятия.</p>
 </div>
 <div class="sect2">
 <h3 id="_lesson_1">1.1. Lesson 1</h3>
@@ -488,7 +488,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 04:03:23 UTC
+Last updated 2021-11-30 04:04:52 UTC
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
