--- a/lessons/index.html
+++ b/lessons/index.html
@@ -445,7 +445,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Материал и ссылки на материал необходимые для занятия.</p>
+<p>Материал и ссылки на материал необходимый для занятия.</p>
 </div>
 </div>
 </div>
@@ -471,7 +471,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 04:03:23 UTC
+Last updated 2021-11-30 04:04:52 UTC
 </div>
 </div>
 </body>
