deploy: 60ad0edb06fa4c335f7f94804cf20ac3cc274528

--- a/lessons/lesson-01.html
+++ b/lessons/lesson-01.html
@@ -445,7 +445,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_practice">Practice</h2>
 <div class="sectionbody">
-
+<div class="sect2">
+<h3 id="_вводное_задание">Вводное задание</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Разработать программу для поиска количества цифр в числе.</p>
+</li>
+<li>
+<p>Разработать программу описывающую компьютер как список комплектующих из которых он состоит.</p>
+</li>
+<li>
+<p>Разработать CLI калькулятор, т.е. взаимодействие с ним осуществляется с помощью Command Line Interface.</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -456,6 +471,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Заполнить форму <a href="https://forms.gle/Jq34PAsihadiJfYX6">Google Form: background</a>.</p>
 </li>
+<li>
+<p>Выполнить действия описанные в <a href="https://process.rakovets.by/common/#_communication">Procces :: Communication</a></p>
+</li>
+<li>
+<p>Выполнить задание <a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -463,7 +484,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 04:04:52 UTC
+Last updated 2021-11-30 04:23:12 UTC
 </div>
 </div>
 </body>
