--- a/index.html
+++ b/index.html
@@ -470,7 +470,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_lesson_1">1.1. Lesson 1</h3>
 <div class="sect3">
 <h4 id="_practice">1.1.1. Practice</h4>
-
+<div class="sect4">
+<h5 id="_вводное_задание">Вводное задание</h5>
+<div class="ulist">
+<ul>
+<li>
+<p>Разработать программу для поиска количества цифр в числе.</p>
+</li>
+<li>
+<p>Разработать программу описывающую компьютер как список комплектующих из которых он состоит.</p>
+</li>
+<li>
+<p>Разработать CLI калькулятор, т.е. взаимодействие с ним осуществляется с помощью Command Line Interface.</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 <div class="sect3">
 <h4 id="_homework">1.1.2. Homework</h4>
@@ -478,6 +493,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Заполнить форму <a href="https://forms.gle/Jq34PAsihadiJfYX6">Google Form: background</a>.</p>
+</li>
+<li>
+<p>Выполнить действия описанные в <a href="https://process.rakovets.by/common/#_communication">Procces :: Communication</a></p>
+</li>
+<li>
+<p>Выполнить задание <a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
 </li>
 </ul>
 </div>
@@ -488,7 +509,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 04:04:52 UTC
+Last updated 2021-11-30 04:23:12 UTC
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
