deploy: d5edce9b5158286875d78b50d59283112d10eb3e

--- a/index.html
+++ b/index.html
@@ -495,7 +495,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Заполнить форму <a href="https://forms.gle/Jq34PAsihadiJfYX6">Google Form: background</a>.</p>
 </li>
 <li>
-<p>Выполнить действия описанные в <a href="https://process.rakovets.by/common/#_communication">Procces :: Communication</a></p>
+<p>Выполнить действия описанные в <a href="https://process.rakovets.by/common/#_communication">Process :: Communication</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p>Invite links в группу JD2-86-dev: <a href="https://t.me/+MFCHmO9LUCQyNWMy" class="bare">https://t.me/+MFCHmO9LUCQyNWMy</a></p>
+</li>
+<li>
+<p>Invite links в группу JD2-86: <a href="https://t.me/+DfHDL0c4BiwwNWZi" class="bare">https://t.me/+DfHDL0c4BiwwNWZi</a></p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Выполнить задание <a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
@@ -509,7 +519,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 04:23:12 UTC
+Last updated 2021-12-02 00:58:44 UTC
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
