deploy: 384f5cc30432325b693defc4141bf7cdcdf7ce96

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -499,10 +499,41 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_2">Lesson 2</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_2">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>Apache Maven</strong> (обязательно в директорию: <code>/opt/apache-maven/${version}</code>).</p>
+</li>
+<li>
+<p>Сгенерировать проект с помощью команды: <code>mvn archetype:generate</code></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_2">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-02 00:58:44 UTC
+Last updated 2021-12-06 02:56:59 UTC
 </div>
 </div>
 </body>
