--- a/index.html
+++ b/index.html
@@ -436,7 +436,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 #footer-text{color:rgba(0,0,0,.6);font-size:.9em}}
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
@@ -447,6 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lessons">1. Lessons</a>
 <ul class="sectlevel2">
 <li><a href="#_lesson_1">1.1. Lesson 1</a></li>
+<li><a href="#_lesson_2">1.2. Lesson 2</a></li>
 </ul>
 </li>
 </ul>
@@ -514,14 +514,42 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_2">1.2. Lesson 2</h3>
+<div class="sect3">
+<h4 id="_practice_2">1.2.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Установить <strong>Apache Maven</strong> (обязательно в директорию: <code>/opt/apache-maven/${version}</code>).</p>
+</li>
+<li>
+<p>Сгенерировать проект с помощью команды: <code>mvn archetype:generate</code></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_2">1.2.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-02 00:58:44 UTC
+Last updated 2021-12-06 02:56:59 UTC
 </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
 </body>
 </html>
