--- a/lessons/lesson-02.html
+++ b/lessons/lesson-02.html
@@ -449,9 +449,47 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Установить <strong>Apache Maven</strong> (обязательно в директорию: <code>/opt/apache-maven/${version}</code>).</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://youtu.be/2hPFBnjDQ4c">How to install Apache Maven?</a></p>
+</li>
+</ul>
+</div>
 </li>
 <li>
-<p>Сгенерировать проект с помощью команды: <code>mvn archetype:generate</code></p>
+<p>Сгенерировать проект с помощью команды: <code>mvn archetype:generate</code>.</p>
+</li>
+<li>
+<p>Найти и добавить в зависимости <strong>JUnit 5</strong>.</p>
+</li>
+<li>
+<p>Добавить тесты в проект.</p>
+</li>
+<li>
+<p>Поочередно, с помощью CLI, выполнить ниже приведенные команды и убедиться что они выполнили возложенную на их функцию:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>mvn compile</code></p>
+</li>
+<li>
+<p><code>mvn clean</code></p>
+</li>
+<li>
+<p><code>mvn test</code></p>
+</li>
+<li>
+<p><code>mvn clean</code></p>
+</li>
+<li>
+<p><code>mvn package</code></p>
+</li>
+<li>
+<p><code>mvn clean</code></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -475,7 +513,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 02:56:59 UTC
+Last updated 2021-12-06 04:09:25 UTC
 </div>
 </div>
 </body>
