deploy: de650f97e8f50c92e43bc4962b85469fad9e9721

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -511,7 +511,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://youtu.be/2hPFBnjDQ4c">How to install Apache Maven?</a></p>
+<p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
 </li>
 </ul>
 </div>
@@ -571,7 +571,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 04:09:25 UTC
+Last updated 2021-12-06 04:19:15 UTC
 </div>
 </div>
 </body>
