deploy: c71f659528160fd682fe1d30a99e83e1310474a8

--- a/index.html
+++ b/index.html
@@ -572,7 +572,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Изучить теоретический материал.</p>
+<p>Изучить теоретический материал:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>wiki</p>
+</li>
+<li>
+<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">Apache Maven MindMap</a></p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a></p>
@@ -586,7 +596,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 14:23:24 UTC
+Last updated 2021-12-06 14:55:53 UTC
 </div>
 </div>
 </body>
