deploy: 07810a7b3c4e5aae3269c3d706aee93d98bca8c9

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lessons">1. Lessons</a>
 <ul class="sectlevel2">
 <li><a href="#_lesson_1">1.1. Lesson 1</a></li>
-<li><a href="#_lesson_2">1.2. Lesson 2</a></li>
+<li><a href="#_lesson_2_apache_maven">1.2. Lesson 2: Apache Maven</a></li>
 </ul>
 </li>
 </ul>
@@ -515,9 +515,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect2">
-<h3 id="_lesson_2">1.2. Lesson 2</h3>
+<h3 id="_lesson_2_apache_maven">1.2. Lesson 2: Apache Maven</h3>
 <div class="sect3">
-<h4 id="_practice_2">1.2.1. Practice</h4>
+<h4 id="_links">1.2.1. Links</h4>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://mvnrepository.com">MVNrepository</a></p>
+</li>
+<li>
+<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_practice_2">1.2.2. Practice</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -568,24 +581,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_homework_2">1.2.2. Homework</h4>
+<h4 id="_homework_2">1.2.3. Homework</h4>
 <div class="ulist">
 <ul>
 <li>
-<p>Изучить теоретический материал:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>wiki</p>
+<p>Изучить теоретический материал.</p>
 </li>
 <li>
-<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">Apache Maven MindMap</a></p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a></p>
+<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
 </li>
 </ul>
 </div>
@@ -596,7 +599,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 14:55:53 UTC
+Last updated 2021-12-06 14:57:07 UTC
 </div>
 </div>
 </body>
