--- a/lessons/index.html
+++ b/lessons/index.html
@@ -500,8 +500,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lesson_2">Lesson 2</h2>
+<h2 id="_lesson_2_apache_maven">Lesson 2: Apache Maven</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_links">Links</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://mvnrepository.com">MVNrepository</a></p>
+</li>
+<li>
+<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
+</li>
+</ul>
+</div>
+</div>
 <div class="sect2">
 <h3 id="_practice_2">Practice</h3>
 <div class="ulist">
@@ -558,20 +571,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Изучить теоретический материал:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>wiki</p>
+<p>Изучить теоретический материал.</p>
 </li>
 <li>
-<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">Apache Maven MindMap</a></p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a></p>
+<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
 </li>
 </ul>
 </div>
@@ -581,7 +584,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 14:55:53 UTC
+Last updated 2021-12-06 14:57:07 UTC
 </div>
 </div>
 </body>
