deploy: 4d6dd52ea51a56005c569d3a92c6fdfbb747f101

--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_2_apache_maven">1.2. Lesson 2: Apache Maven</a></li>
 </ul>
 </li>
+<li><a href="#_links">2. Links</a></li>
 </ul>
 </div>
 </div>
@@ -517,20 +518,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_lesson_2_apache_maven">1.2. Lesson 2: Apache Maven</h3>
 <div class="sect3">
-<h4 id="_links">1.2.1. Links</h4>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://mvnrepository.com">MVNrepository</a></p>
-</li>
-<li>
-<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
-</li>
-</ul>
-</div>
-</div>
-<div class="sect3">
-<h4 id="_practice_2">1.2.2. Practice</h4>
+<h4 id="_practice_2">1.2.1. Practice</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -581,7 +569,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_homework_2">1.2.3. Homework</h4>
+<h4 id="_homework_2">1.2.2. Homework</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -596,10 +584,25 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_links">2. Links</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://mvnrepository.com">MVNrepository</a></p>
+</li>
+<li>
+<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 14:57:07 UTC
+Last updated 2021-12-06 15:14:41 UTC
 </div>
 </div>
 </body>
