deploy: 0cf5725d1909bc0c5787070669eaba9484362bc5

--- a/lessons/lesson-02.html
+++ b/lessons/lesson-02.html
@@ -506,6 +506,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
 </li>
+<li>
+<p>Зарегистрироваться на AWS: <a href="https://process.rakovets.by/course/java/enterprise/#_amazon_web_service" class="bare">https://process.rakovets.by/course/java/enterprise/#_amazon_web_service</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -513,7 +516,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 15:14:41 UTC
+Last updated 2021-12-07 04:23:19 UTC
 </div>
 </div>
 </body>
