--- a/index.html
+++ b/index.html
@@ -443,13 +443,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_lessons">1. Lessons</a>
+<li><a href="#_links">1. Links</a></li>
+<li><a href="#_lessons">2. Lessons</a>
 <ul class="sectlevel2">
-<li><a href="#_lesson_1">1.1. Lesson 1</a></li>
-<li><a href="#_lesson_2_apache_maven">1.2. Lesson 2: Apache Maven</a></li>
+<li><a href="#_lesson_1">2.1. Lesson 1</a></li>
+<li><a href="#_lesson_2_apache_maven">2.2. Lesson 2: Apache Maven</a></li>
 </ul>
 </li>
-<li><a href="#_links">2. Links</a></li>
 </ul>
 </div>
 </div>
@@ -462,15 +462,33 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lessons">1. Lessons</h2>
+<h2 id="_links">1. Links</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://process.rakovets.by">Process for Course</a></p>
+</li>
+<li>
+<p><a href="https://mvnrepository.com">MVNrepository</a></p>
+</li>
+<li>
+<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_lessons">2. Lessons</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Материал и ссылки на материал необходимый для занятия.</p>
 </div>
 <div class="sect2">
-<h3 id="_lesson_1">1.1. Lesson 1</h3>
+<h3 id="_lesson_1">2.1. Lesson 1</h3>
 <div class="sect3">
-<h4 id="_practice">1.1.1. Practice</h4>
+<h4 id="_practice">2.1.1. Practice</h4>
 <div class="sect4">
 <h5 id="_вводное_задание">Вводное задание</h5>
 <div class="ulist">
@@ -489,7 +507,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_homework">1.1.2. Homework</h4>
+<h4 id="_homework">2.1.2. Homework</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -516,9 +534,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect2">
-<h3 id="_lesson_2_apache_maven">1.2. Lesson 2: Apache Maven</h3>
+<h3 id="_lesson_2_apache_maven">2.2. Lesson 2: Apache Maven</h3>
 <div class="sect3">
-<h4 id="_practice_2">1.2.1. Practice</h4>
+<h4 id="_practice_2">2.2.1. Practice</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -569,7 +587,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_homework_2">1.2.2. Homework</h4>
+<h4 id="_homework_2">2.2.2. Homework</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -578,31 +596,19 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
 </li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_links">2. Links</h2>
-<div class="sectionbody">
-<div class="ulist">
-<ul>
 <li>
-<p><a href="https://mvnrepository.com">MVNrepository</a></p>
-</li>
-<li>
-<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
+<p>Зарегистрироваться на AWS: <a href="https://process.rakovets.by/course/java/enterprise/#_amazon_web_service" class="bare">https://process.rakovets.by/course/java/enterprise/#_amazon_web_service</a></p>
 </li>
 </ul>
+</div>
+</div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-06 15:14:41 UTC
+Last updated 2021-12-07 04:23:19 UTC
 </div>
 </div>
 </body>
