deploy: 7996fd763fe992f5fb81e56fb040f4738c2ac71d

--- a/lessons/lesson-03.html
+++ b/lessons/lesson-03.html
@@ -522,7 +522,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Малиновский Павел Сергеевич</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">???</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Нестерук Даниил Андреевич</p></td>
@@ -551,7 +551,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-07 04:44:44 UTC
+Last updated 2021-12-07 04:48:03 UTC
 </div>
 </div>
 </body>
