deploy: 1237a1dcfcd43cbebcfeeb03091a3fa322cb9b29

--- a/lessons/lesson-03.html
+++ b/lessons/lesson-03.html
@@ -452,7 +452,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
+<p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
 </li>
 </ul>
 </div>
@@ -551,7 +551,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-07 04:48:03 UTC
+Last updated 2021-12-07 04:48:51 UTC
 </div>
 </div>
 </body>
