deploy: 86e68b9ac3616b8c151f27dffc49ba99b31aa530

--- a/index.html
+++ b/index.html
@@ -443,7 +443,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_links">1. Links</a></li>
+<li><a href="#_links">1. Links</a>
+<ul class="sectlevel2">
+<li><a href="#_services">1.1. Services</a></li>
+<li><a href="#_resources">1.2. Resources</a></li>
+<li><a href="#_topics">1.3. Topics</a></li>
+</ul>
+</li>
 <li><a href="#_lessons">2. Lessons</a>
 <ul class="sectlevel2">
 <li><a href="#_lesson_1">2.1. Lesson 1</a></li>
@@ -464,18 +470,50 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_links">1. Links</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_services">1.1. Services</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com">GitHub</a></p>
+</li>
+<li>
+<p><a href="https://mvnrepository.com">MVNrepository</a></p>
+</li>
+<li>
+<p><a href="https://aws.amazon.com">AWS</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_resources">1.2. Resources</h3>
 <div class="ulist">
 <ul>
 <li>
 <p><a href="https://process.rakovets.by">Process for Course</a></p>
 </li>
 <li>
-<p><a href="https://mvnrepository.com">MVNrepository</a></p>
-</li>
-<li>
 <p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
 </li>
+<li>
+<p><a href="https://git-scm.com/book/ru/v2">Справочник: Git</a></p>
+</li>
+<li>
+<p><a href="https://githowto.com/ru">Практика: Git How To</a></p>
+</li>
 </ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_topics">1.3. Topics</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://habrahabr.ru/blogs/Git/106912/">Удачная модель ветвления для Git.</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
@@ -608,7 +646,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-07 04:48:51 UTC
+Last updated 2021-12-08 05:05:07 UTC
 </div>
 </div>
 </body>
