deploy: 66056f19de83e02d9e0153c5af6a978a3258d06c

--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_lessons">2. Lessons</a>
 <ul class="sectlevel2">
-<li><a href="#_lesson_1">2.1. Lesson 1</a></li>
-<li><a href="#_lesson_2_apache_maven">2.2. Lesson 2: Apache Maven</a></li>
+<li><a href="#_lesson_1_intro_testing">2.1. Lesson 1: Intro. Testing</a></li>
+<li><a href="#_lesson_2_apache_maven_intro">2.2. Lesson 2: Apache Maven. Intro</a></li>
 </ul>
 </li>
 </ul>
@@ -524,7 +524,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Материал и ссылки на материал необходимый для занятия.</p>
 </div>
 <div class="sect2">
-<h3 id="_lesson_1">2.1. Lesson 1</h3>
+<h3 id="_lesson_1_intro_testing">2.1. Lesson 1: Intro. Testing</h3>
 <div class="sect3">
 <h4 id="_practice">2.1.1. Practice</h4>
 <div class="sect4">
@@ -572,7 +572,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect2">
-<h3 id="_lesson_2_apache_maven">2.2. Lesson 2: Apache Maven</h3>
+<h3 id="_lesson_2_apache_maven_intro">2.2. Lesson 2: Apache Maven. Intro</h3>
 <div class="sect3">
 <h4 id="_practice_2">2.2.1. Practice</h4>
 <div class="ulist">
@@ -646,7 +646,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:05:07 UTC
+Last updated 2021-12-08 05:06:53 UTC
 </div>
 </div>
 </body>
