--- a/lessons/index.html
+++ b/lessons/index.html
@@ -450,7 +450,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lesson_1">Lesson 1</h2>
+<h2 id="_lesson_1_intro_testing">Lesson 1: Intro. Testing</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_practice">Practice</h3>
@@ -500,7 +500,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lesson_2_apache_maven">Lesson 2: Apache Maven</h2>
+<h2 id="_lesson_2_apache_maven_intro">Lesson 2: Apache Maven. Intro</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_practice_2">Practice</h3>
@@ -574,7 +574,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:05:07 UTC
+Last updated 2021-12-08 05:06:53 UTC
 </div>
 </div>
 </body>
