deploy: 6e39f9e49f9f000ea730799c0010eef548c29747

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -579,17 +579,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Установить <strong>Git</strong> (обязательно в директорию: <code>/opt/git</code>).</p>
+<p>Установить <strong>Git</strong>.</p>
+</li>
+<li>
+<p>Выполнить задание:</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
+<p><a href="https://github.com/rakovets/course-development-tools/blob/master/git.adoc">Командная разработка с помощью Git</a> совместно с разработчиком, которого тренер назначил работать с Вами в паре.</p>
 </li>
 </ul>
 </div>
-</li>
-<li>
-<p>Выполнить задание по <a href="https://github.com/rakovets/course-development-tools/blob/master/git.adoc">Командная разработка с помощью Git</a> совместно с разработчиком, которого тренер назначил работать с Вами в паре.</p>
 </li>
 </ul>
 </div>
@@ -602,7 +602,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Изучить теоретический материал.</p>
 </li>
 <li>
-<p>Выполнить задание по Asciidoc: <a href="https://github.com/rakovets/workshop-asciidoc">Creating documentation with the AsciiDoc</a></p>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/workshop-asciidoc">Creating documentation with the AsciiDoc</a></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -650,7 +657,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/caching/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/caching/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Малиновский Павел Сергеевич</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">???</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/</a></p></td>
 </tr>
 <tr>
@@ -681,7 +688,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:07:58 UTC
+Last updated 2021-12-08 05:11:38 UTC
 </div>
 </div>
 </body>
