--- a/index.html
+++ b/index.html
@@ -447,7 +447,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel2">
 <li><a href="#_services">1.1. Services</a></li>
 <li><a href="#_resources">1.2. Resources</a></li>
-<li><a href="#_topics">1.3. Topics</a></li>
+<li><a href="#_videos">1.3. Videos</a></li>
+<li><a href="#_topics">1.4. Topics</a></li>
 </ul>
 </li>
 <li><a href="#_lessons">2. Lessons</a>
@@ -507,7 +508,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect2">
-<h3 id="_topics">1.3. Topics</h3>
+<h3 id="_videos">1.3. Videos</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_topics">1.4. Topics</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -529,19 +543,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect3">
 <h4 id="_practice">2.1.1. Practice</h4>
 <div class="sect4">
-<h5 id="_вводное_задание">Вводное задание</h5>
-<div class="ulist">
-<ul>
-<li>
+<h5 id="_task_1">Task 1</h5>
+<div class="paragraph">
 <p>Разработать программу для поиска количества цифр в числе.</p>
-</li>
-<li>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_task_2">Task 2</h5>
+<div class="paragraph">
 <p>Разработать программу описывающую компьютер как список комплектующих из которых он состоит.</p>
-</li>
-<li>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_task_3">Task 3</h5>
+<div class="paragraph">
 <p>Разработать CLI калькулятор, т.е. взаимодействие с ним осуществляется с помощью Command Line Interface.</p>
-</li>
-</ul>
 </div>
 </div>
 </div>
@@ -566,7 +582,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </li>
 <li>
-<p>Выполнить задание <a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -580,14 +603,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Установить <strong>Apache Maven</strong> (обязательно в директорию: <code>/opt/apache-maven/${version}</code>).</p>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
 </li>
 </ul>
 </div>
-</li>
+<div class="sect4">
+<h5 id="_task_1_2">Task 1</h5>
+<div class="ulist">
+<ul>
 <li>
 <p>Сгенерировать проект с помощью команды: <code>mvn archetype:generate</code>.</p>
 </li>
@@ -625,6 +647,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </div>
 </div>
+</div>
 <div class="sect3">
 <h4 id="_homework_2">2.2.2. Homework</h4>
 <div class="ulist">
@@ -633,10 +656,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Изучить теоретический материал.</p>
 </li>
 <li>
-<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
+<p>Зарегистрироваться на AWS: <a href="https://process.rakovets.by/course/java/enterprise/#_amazon_web_service" class="bare">https://process.rakovets.by/course/java/enterprise/#_amazon_web_service</a></p>
 </li>
 <li>
-<p>Зарегистрироваться на AWS: <a href="https://process.rakovets.by/course/java/enterprise/#_amazon_web_service" class="bare">https://process.rakovets.by/course/java/enterprise/#_amazon_web_service</a></p>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -677,6 +707,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p><a href="https://github.com/rakovets/workshop-asciidoc">Creating documentation with the AsciiDoc</a></p>
+</li>
+<li>
+<p>Маппинг тем для задания по AsciiDoc приведен ниже.</p>
 </li>
 </ul>
 </div>
@@ -759,7 +792,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:11:38 UTC
+Last updated 2021-12-08 05:15:57 UTC
 </div>
 </div>
 </body>
