--- a/lessons/lesson-01.html
+++ b/lessons/lesson-01.html
@@ -446,19 +446,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_practice">Practice</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_вводное_задание">Вводное задание</h3>
-<div class="ulist">
-<ul>
-<li>
+<h3 id="_task_1">Task 1</h3>
+<div class="paragraph">
 <p>Разработать программу для поиска количества цифр в числе.</p>
-</li>
-<li>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_task_2">Task 2</h3>
+<div class="paragraph">
 <p>Разработать программу описывающую компьютер как список комплектующих из которых он состоит.</p>
-</li>
-<li>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_task_3">Task 3</h3>
+<div class="paragraph">
 <p>Разработать CLI калькулятор, т.е. взаимодействие с ним осуществляется с помощью Command Line Interface.</p>
-</li>
-</ul>
 </div>
 </div>
 </div>
@@ -485,7 +487,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </li>
 <li>
-<p>Выполнить задание <a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://process.rakovets.by/course/java/enterprise/#_v0_1">Intro</a></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -494,7 +503,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:11:38 UTC
+Last updated 2021-12-08 05:15:57 UTC
 </div>
 </div>
 </body>
