--- a/lessons/lesson-02.html
+++ b/lessons/lesson-02.html
@@ -449,14 +449,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Установить <strong>Apache Maven</strong> (обязательно в директорию: <code>/opt/apache-maven/${version}</code>).</p>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
 </li>
 </ul>
 </div>
-</li>
+<div class="sect2">
+<h3 id="_task_1">Task 1</h3>
+<div class="ulist">
+<ul>
 <li>
 <p>Сгенерировать проект с помощью команды: <code>mvn archetype:generate</code>.</p>
 </li>
@@ -495,6 +494,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+</div>
 <div class="sect1">
 <h2 id="_homework">Homework</h2>
 <div class="sectionbody">
@@ -504,10 +504,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Изучить теоретический материал.</p>
 </li>
 <li>
-<p>Выполнить задание <a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
+<p>Зарегистрироваться на AWS: <a href="https://process.rakovets.by/course/java/enterprise/#_amazon_web_service" class="bare">https://process.rakovets.by/course/java/enterprise/#_amazon_web_service</a></p>
 </li>
 <li>
-<p>Зарегистрироваться на AWS: <a href="https://process.rakovets.by/course/java/enterprise/#_amazon_web_service" class="bare">https://process.rakovets.by/course/java/enterprise/#_amazon_web_service</a></p>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc">Apache Maven: Intro</a>.</p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -516,7 +523,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:11:38 UTC
+Last updated 2021-12-08 05:15:57 UTC
 </div>
 </div>
 </body>
