--- a/links.html
+++ b/links.html
@@ -482,6 +482,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
+<h2 id="_videos">Videos</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_topics">Topics</h2>
 <div class="sectionbody">
 <div class="ulist">
@@ -496,7 +511,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:11:38 UTC
+Last updated 2021-12-08 05:15:57 UTC
 </div>
 </div>
 </body>
