--- a/lessons/lesson-03.html
+++ b/lessons/lesson-03.html
@@ -479,6 +479,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://github.com/rakovets/workshop-asciidoc">Creating documentation with the AsciiDoc</a></p>
 </li>
+<li>
+<p>Маппинг тем для задания по AsciiDoc приведен ниже.</p>
+</li>
 </ul>
 </div>
 </li>
@@ -558,7 +561,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:11:38 UTC
+Last updated 2021-12-08 05:15:57 UTC
 </div>
 </div>
 </body>
