--- a/links.html
+++ b/links.html
@@ -487,6 +487,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
+<p><a href="https://youtu.be/ilhpwkcvEo0" target="_blank" rel="noopener">How to install OpenJDK 11?</a></p>
+</li>
+<li>
 <p><a href="https://youtu.be/2hPFBnjDQ4c" target="_blank" rel="noopener">How to install Apache Maven?</a></p>
 </li>
 <li>
@@ -511,7 +514,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:15:57 UTC
+Last updated 2021-12-08 05:23:14 UTC
 </div>
 </div>
 </body>
