deploy: 0803980b9a9a0d5fbcc8f629e33a0229f6d0ea4f

--- a/links.html
+++ b/links.html
@@ -448,13 +448,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com">GitHub</a></p>
+<p><a href="https://github.com" target="_blank" rel="noopener">GitHub</a></p>
 </li>
 <li>
-<p><a href="https://mvnrepository.com">MVNrepository</a></p>
+<p><a href="https://mvnrepository.com" target="_blank" rel="noopener">MVNrepository</a></p>
 </li>
 <li>
-<p><a href="https://aws.amazon.com">AWS</a></p>
+<p><a href="https://aws.amazon.com" target="_blank" rel="noopener">AWS</a></p>
 </li>
 </ul>
 </div>
@@ -466,16 +466,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://process.rakovets.by">Process for Course</a></p>
+<p><a href="https://process.rakovets.by" target="_blank" rel="noopener">Process for Course</a></p>
 </li>
 <li>
-<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162">MindMap: Apache Maven</a></p>
+<p><a href="https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162" target="_blank" rel="noopener">MindMap: Apache Maven</a></p>
 </li>
 <li>
-<p><a href="https://git-scm.com/book/ru/v2">Справочник: Git</a></p>
+<p><a href="https://git-scm.com/book/ru/v2" target="_blank" rel="noopener">Справочник: Git</a></p>
 </li>
 <li>
-<p><a href="https://githowto.com/ru">Практика: Git How To</a></p>
+<p><a href="https://githowto.com/ru" target="_blank" rel="noopener">Практика: Git How To</a></p>
 </li>
 </ul>
 </div>
@@ -505,7 +505,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://habrahabr.ru/blogs/Git/106912/">Удачная модель ветвления для Git.</a></p>
+<p><a href="https://habrahabr.ru/blogs/Git/106912/" target="_blank" rel="noopener">Удачная модель ветвления для Git.</a></p>
 </li>
 </ul>
 </div>
@@ -514,7 +514,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 05:23:14 UTC
+Last updated 2021-12-08 05:28:58 UTC
 </div>
 </div>
 </body>
