deploy: 6c6e4b558561dde76e844a1f20eff7c8a157ce74

--- a/links.html
+++ b/links.html
@@ -448,13 +448,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com" target="_blank" rel="noopener">2</a></p>
+<p><a href="https://github.com">github</a></p>
 </li>
 <li>
-<p><a href="https://mvnrepository.com" target="_blank" rel="noopener">2</a></p>
+<p><a href="https://mvnrepository.com">mvnrepository</a></p>
 </li>
 <li>
-<p><a href="https://aws.amazon.com" target="_blank" rel="noopener">2</a></p>
+<p><a href="https://aws.amazon.com">amazon</a></p>
 </li>
 </ul>
 </div>
@@ -514,7 +514,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-08 18:09:01 UTC
+Last updated 2021-12-08 18:16:06 UTC
 </div>
 </div>
 </body>
