--- a/index.html
+++ b/index.html
@@ -472,6 +472,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_links">1. Links</h2>
 <div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://drive.google.com/drive/folders/1y-PWXwJRSjE7EiasDO_HOcZ7Oqd14tGO?usp=sharing">Google Drive</a></p>
+</li>
+<li>
+<p><a href="https://wiki.rakovets.by">Wiki by Rakovets</a></p>
+</li>
+</ul>
+</div>
 <div class="sect2">
 <h3 id="_services">1.1. Services</h3>
 <div class="ulist">
@@ -795,7 +805,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 02:38:54 UTC
+Last updated 2021-12-09 04:20:21 UTC
 </div>
 </div>
 </body>
