--- a/links.html
+++ b/links.html
@@ -442,6 +442,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h1>Links</h1>
 </div>
 <div id="content">
+<div id="preamble">
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://drive.google.com/drive/folders/1y-PWXwJRSjE7EiasDO_HOcZ7Oqd14tGO?usp=sharing">Google Drive</a></p>
+</li>
+<li>
+<p><a href="https://wiki.rakovets.by">Wiki by Rakovets</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_services">Services</h2>
 <div class="sectionbody">
@@ -514,7 +528,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 02:38:54 UTC
+Last updated 2021-12-09 04:20:21 UTC
 </div>
 </div>
 </body>
