deploy: 26b8ae77425e63722d8449df1c9ef0b51b584c7a

--- a/index.html
+++ b/index.html
@@ -530,6 +530,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/z2N2ON87vXY" target="_blank" rel="noopener">How to install Git?</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/TUKT1CSzwZI" target="_blank" rel="noopener">Lesson 1:Lesson 1: Intro. Testing</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/l_6TtVRJlyQ" target="_blank" rel="noopener">Lesson 2: Apache Maven. Intro</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/oFEom97DbcA" target="_blank" rel="noopener">Lesson 3: Git. Asciidoc</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -805,7 +814,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 04:20:21 UTC
+Last updated 2021-12-09 15:35:07 UTC
 </div>
 </div>
 </body>
